<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tab1"
    android:background="@color/black"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Para arrancar"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginTop="20dp"
            android:id="@+id/imgbut1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/duki"
            />

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/imgbut2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/quevedo"
            />
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/imgbut3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/milo"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recomendada para hoy"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginTop="20dp"

                android:id="@+id/imgbut4"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ademas"
                />

            <ImageView
                android:id="@+id/imgbut5"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/milagrosa" />

            <ImageView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/imgbut6"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/bien"
                />
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/imgbut7"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/estrella"
                />
            <ImageView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:id="@+id/imgbut8"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/nota"

                />




        </LinearLayout>
    </HorizontalScrollView>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textColor="@color/descripcion"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="43dp"
                android:text="@string/descripcion2"
                android:textColor="@color/descripcion"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="96dp"
                android:text="@string/descripcion3"
                android:textColor="@color/descripcion"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:text="@string/descripcion4"
                android:textColor="@color/descripcion"
                android:textSize="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:text="@string/descripcion5"
                android:textColor="@color/descripcion"
                android:textSize="10dp"/>

        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Escuchadas recientemente"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            />





    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginLeft=""
            android:id="@+id/imgbut9"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/quevedo"
            />
        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/imgbut10"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/milo"
            />

    </LinearLayout>


</LinearLayout>